# crypto_analysis

./: mkdocs.yml  pyproject.toml
.github/workflows/: CI.yml
app/: extract.py
